--- a/index.html
+++ b/index.html
@@ -315,42 +315,42 @@
 
     <div id="clock1">
         <div class="sun-moon-icon" id="sunMoonIcon1"></div>
-        <p id="date1">{{ date1 }}</p>
+        <span><p id="date1">&nbsp; &nbsp;{{ date1 }}</p></span>
         <p id="time1">{{ time1 }}</p>
-        <p id="text1">Buenos Aires <br> ARGENTINA</p>
+        <p id="text1">Tokyo <br> JAPAN</p>
     </div>
 
     <div id="clock2">
         <div class="sun-moon-icon" id="sunMoonIcon2"></div>
-        <p id="date2">{{ date2 }}</p>
+        <span><p id="date2">&nbsp; &nbsp;{{ date2 }}</p></span>
         <p id="time2">{{ time2 }}</p>
         <p id="text2">Coimbatore <br> INDIA</p>
     </div>
 
     <div id="clock3">
         <div class="sun-moon-icon" id="sunMoonIcon3"></div>
-        <p id="date3">{{ date3 }}</p>
+        <p id="date3">&nbsp; &nbsp;{{ date3 }}</p>
         <p id="time3">{{ time3 }}</p>
-        <p id="text3">Tokyo <br> JAPAN</p>
+        <p id="text3">Detroit, MI <br> USA</p>
     </div>
 
     <div id="clock4">
         <div class="sun-moon-icon" id="sunMoonIcon4"></div>
-        <p id="date4">{{ date4 }}</p>
+        <p id="date4">&nbsp; &nbsp;{{ date4 }}</p>
         <p id="time4">{{ time4 }}</p>
         <p id="text4">Riyadh <br> SAUDI ARABIA</p>
     </div>
 
     <div id="clock5">
         <div class="sun-moon-icon" id="sunMoonIcon5"></div>
-        <p id="date5">{{ date5 }}</p>
+        <p id="date5">&nbsp; &nbsp;{{ date5 }}</p>
         <p id="time5">{{ time5 }}</p>
-        <p id="text5">Detroit, MI <br> USA</p>
+        <p id="text5">Buenos Aires <br> ARGENTINA</p>
     </div>
 
     <div id="clock6">
         <div class="sun-moon-icon" id="sunMoonIcon6"></div>
-        <p id="date6">{{ date6 }}</p>
+        <p id="date6">&nbsp; &nbsp;{{ date6 }}</p>
         <p id="time6">{{ time6 }}</p>
         <p id="text6">Bangkok <br> THAILAND</p>
     </div>
@@ -372,9 +372,8 @@
         updateTime1();
         function updateTime1() {
             var cd = new Date(
-                new Date().toLocaleString("en-US", {
-                    timeZone: "America/Argentina/Buenos_Aires"
-                })
+                new Date().toLocaleString("en-US", 
+                { timeZone: "Asia/Tokyo" })
             );
 
 
@@ -470,7 +469,7 @@
         updatetime3();
         function updatetime3() {
             var cd = new Date(
-                new Date().toLocaleString("en-US", { timeZone: "Asia/Tokyo" })
+                new Date().toLocaleString("en-US", { timeZone: "America/Detroit" })
             );
             clock3.time3 =
                 zeroPadding(cd.getHours(), 2) +
@@ -552,7 +551,9 @@
         updatetime5();
         function updatetime5() {
             var cd = new Date(
-                new Date().toLocaleString("en-US", { timeZone: "America/Detroit" })
+                new Date().toLocaleString("en-US", {
+                    timeZone: "America/Argentina/Buenos_Aires"
+                })
             );
             clock5.time5 =
                 zeroPadding(cd.getHours(), 2) +
@@ -658,12 +659,12 @@
 
             #date1 {
                 letter-spacing: 0.1em;
-                font-size: 24px;
+                font-size: 26px;
             }
 
             #text1 {
                 letter-spacing: 0.1em;
-                font-size: 30px;
+                font-size: 34px;
                 padding: 20px 0 0;
             }
         }
@@ -687,12 +688,12 @@
 
             #date2 {
                 letter-spacing: 0.1em;
-                font-size: 24px;
+                font-size: 26px;
             }
 
             #text2 {
                 letter-spacing: 0.1em;
-                font-size: 30px;
+                font-size: 34px;
                 padding: 20px 0 0;
             }
         }
@@ -716,12 +717,12 @@
 
             #date3 {
                 letter-spacing: 0.1em;
-                font-size: 24px;
+                font-size: 26px;
             }
 
             #text3 {
                 letter-spacing: 0.1em;
-                font-size: 30px;
+                font-size: 34px;
                 padding: 20px 0 0;
             }
         }
@@ -745,12 +746,12 @@
 
             #date4 {
                 letter-spacing: 0.1em;
-                font-size: 24px;
+                font-size: 26px;
             }
 
             #text4 {
                 letter-spacing: 0.1em;
-                font-size: 30px;
+                font-size: 34px;
                 padding: 30px 0 0;
             }
         }
@@ -774,12 +775,12 @@
 
             #date5 {
                 letter-spacing: 0.1em;
-                font-size: 24px;
+                font-size: 26px;
             }
 
             #text5 {
                 letter-spacing: 0.1em;
-                font-size: 30px;
+                font-size: 34px;
                 padding: 30px 0 0;
             }
         }
@@ -803,12 +804,12 @@
 
             #date6 {
                 letter-spacing: 0.1em;
-                font-size: 24px;
+                font-size: 26px;
             }
 
             #text6 {
                 letter-spacing: 0.1em;
-                font-size: 30px;
+                font-size: 34px;
                 padding: 30px 0 0;
             }
         }
