--- a/index.html
+++ b/index.html
@@ -381,9 +381,10 @@
             clock1.time1 =
                 zeroPadding(cd.getHours(), 2) +
                 ":" +
-                zeroPadding(cd.getMinutes(), 2) +
-                ":" +
-                zeroPadding(cd.getSeconds(), 2);
+                zeroPadding(cd.getMinutes(), 2);
+                //  +
+                // ":" +
+                // zeroPadding(cd.getSeconds(), 2);
             clock1.date1 =
                 zeroPadding(cd.getFullYear(), 4) +
                 "-" +
@@ -433,9 +434,10 @@
             clock2.time2 =
                 zeroPadding(cd.getHours(), 2) +
                 ":" +
-                zeroPadding(cd.getMinutes(), 2) +
-                ":" +
-                zeroPadding(cd.getSeconds(), 2);
+                zeroPadding(cd.getMinutes(), 2) ;
+                // +
+                // ":" +
+                // zeroPadding(cd.getSeconds(), 2);
             clock2.date2 =
                 zeroPadding(cd.getFullYear(), 4) +
                 "-" +
@@ -474,9 +476,10 @@
             clock3.time3 =
                 zeroPadding(cd.getHours(), 2) +
                 ":" +
-                zeroPadding(cd.getMinutes(), 2) +
-                ":" +
-                zeroPadding(cd.getSeconds(), 2);
+                zeroPadding(cd.getMinutes(), 2) ;
+                // +
+                // ":" +
+                // zeroPadding(cd.getSeconds(), 2);
             clock3.date3 =
                 zeroPadding(cd.getFullYear(), 4) +
                 "-" +
@@ -515,9 +518,10 @@
             clock4.time4 =
                 zeroPadding(cd.getHours(), 2) +
                 ":" +
-                zeroPadding(cd.getMinutes(), 2) +
-                ":" +
-                zeroPadding(cd.getSeconds(), 2);
+                zeroPadding(cd.getMinutes(), 2);
+                // +
+                // ":" +
+                // zeroPadding(cd.getSeconds(), 2);
             clock4.date4 =
                 zeroPadding(cd.getFullYear(), 4) +
                 "-" +
@@ -558,9 +562,10 @@
             clock5.time5 =
                 zeroPadding(cd.getHours(), 2) +
                 ":" +
-                zeroPadding(cd.getMinutes(), 2) +
-                ":" +
-                zeroPadding(cd.getSeconds(), 2);
+                zeroPadding(cd.getMinutes(), 2) ;
+                // +
+                // ":" +
+                // zeroPadding(cd.getSeconds(), 2);
             clock5.date5 =
                 zeroPadding(cd.getFullYear(), 4) +
                 "-" +
@@ -599,9 +604,10 @@
             clock6.time6 =
                 zeroPadding(cd.getHours(), 2) +
                 ":" +
-                zeroPadding(cd.getMinutes(), 2) +
-                ":" +
-                zeroPadding(cd.getSeconds(), 2);
+                zeroPadding(cd.getMinutes(), 2);
+                //  +
+                // ":" +
+                // zeroPadding(cd.getSeconds(), 2);
             clock6.date6 =
                 zeroPadding(cd.getFullYear(), 4) +
                 "-" +
