--- a/index.html
+++ b/index.html
@@ -315,42 +315,42 @@
 
     <div id="clock1">
         <div class="sun-moon-icon" id="sunMoonIcon1"></div>
-        <span><p id="date1">&nbsp; &nbsp;{{ date1 }}</p></span>
+        <p id="date1">&nbsp; &nbsp; &nbsp;{{ date1 }}</p>
         <p id="time1">{{ time1 }}</p>
         <p id="text1">Tokyo <br> JAPAN</p>
     </div>
 
     <div id="clock2">
         <div class="sun-moon-icon" id="sunMoonIcon2"></div>
-        <span><p id="date2">&nbsp; &nbsp;{{ date2 }}</p></span>
+        <p id="date2">&nbsp; &nbsp; &nbsp;{{ date2 }}</p>
         <p id="time2">{{ time2 }}</p>
         <p id="text2">Coimbatore <br> INDIA</p>
     </div>
 
     <div id="clock3">
         <div class="sun-moon-icon" id="sunMoonIcon3"></div>
-        <p id="date3">&nbsp; &nbsp;{{ date3 }}</p>
+        <p id="date3">&nbsp; &nbsp; &nbsp;{{ date3 }}</p>
         <p id="time3">{{ time3 }}</p>
-        <p id="text3">Detroit, MI <br> USA</p>
+        <p id="text3">Detroit,MI <br> USA</p>
     </div>
 
     <div id="clock4">
         <div class="sun-moon-icon" id="sunMoonIcon4"></div>
-        <p id="date4">&nbsp; &nbsp;{{ date4 }}</p>
+        <p id="date4">&nbsp; &nbsp; &nbsp;{{ date4 }}</p>
         <p id="time4">{{ time4 }}</p>
         <p id="text4">Riyadh <br> SAUDI ARABIA</p>
     </div>
 
     <div id="clock5">
         <div class="sun-moon-icon" id="sunMoonIcon5"></div>
-        <p id="date5">&nbsp; &nbsp;{{ date5 }}</p>
+       <p id="date5">&nbsp; &nbsp; &nbsp;{{ date5 }}</p>
         <p id="time5">{{ time5 }}</p>
         <p id="text5">Buenos Aires <br> ARGENTINA</p>
     </div>
 
     <div id="clock6">
         <div class="sun-moon-icon" id="sunMoonIcon6"></div>
-        <p id="date6">&nbsp; &nbsp;{{ date6 }}</p>
+        <span><p id="date6">&nbsp; &nbsp; &nbsp;{{ date6 }}</p></span>
         <p id="time6">{{ time6 }}</p>
         <p id="text6">Bangkok <br> THAILAND</p>
     </div>
@@ -665,7 +665,7 @@
 
             #date1 {
                 letter-spacing: 0.1em;
-                font-size: 26px;
+                font-size: 23px;
             }
 
             #text1 {
@@ -694,7 +694,7 @@
 
             #date2 {
                 letter-spacing: 0.1em;
-                font-size: 26px;
+                font-size: 23px;
             }
 
             #text2 {
@@ -709,7 +709,7 @@
             color: #ffffff;
             text-align: center;
             position: absolute;
-            left: 85%;
+            left: 80%;
             bottom: 45%;
             transform: translate(-50%, -50%);
             color: #fff;
@@ -723,7 +723,7 @@
 
             #date3 {
                 letter-spacing: 0.1em;
-                font-size: 26px;
+                font-size: 23px;
             }
 
             #text3 {
@@ -752,7 +752,7 @@
 
             #date4 {
                 letter-spacing: 0.1em;
-                font-size: 26px;
+                font-size: 23px;
             }
 
             #text4 {
@@ -781,7 +781,7 @@
 
             #date5 {
                 letter-spacing: 0.1em;
-                font-size: 26px;
+                font-size: 23px;
             }
 
             #text5 {
@@ -796,7 +796,7 @@
             color: #ffffff;
             text-align: center;
             position: absolute;
-            left:85%;
+            left: 80%;
             top: 75%;
             transform: translate(-50%, -50%);
             color: #fff;
@@ -810,7 +810,7 @@
 
             #date6 {
                 letter-spacing: 0.1em;
-                font-size: 26px;
+                font-size: 23px;
             }
 
             #text6 {
