--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
     <div id="clock6">
         <div class="sun-moon-icon" id="sunMoonIcon6"></div>
-        <span><p id="date6">&nbsp; &nbsp; &nbsp;{{ date6 }}</p></span>
+        <p id="date6">&nbsp; &nbsp; &nbsp;{{ date6 }}</p>
         <p id="time6">{{ time6 }}</p>
         <p id="text6">Bangkok <br> THAILAND</p>
     </div>
@@ -651,7 +651,7 @@
             color: #ffffff;
             text-align: center;
             position: absolute;
-            left: 50%;
+            left: 47%;
             bottom: 45%;
             transform: translate(-50%, -50%);
             color: #fff;
@@ -709,7 +709,7 @@
             color: #ffffff;
             text-align: center;
             position: absolute;
-            left: 80%;
+            right: -5%;
             bottom: 45%;
             transform: translate(-50%, -50%);
             color: #fff;
@@ -796,7 +796,7 @@
             color: #ffffff;
             text-align: center;
             position: absolute;
-            left: 80%;
+            right: -5%;
             top: 75%;
             transform: translate(-50%, -50%);
             color: #fff;
