--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <link rel="stylesheet" href="google-fonts.css" />
     <!-- <link href='https://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'/> -->
 
+    <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="vue.min.js"></script>
+    <script>
+        $(function () {
+            var n = 0;
+            setInterval(function () {
+                n = Math.floor((Math.random() * 5));
+                $("#verticalFlip span").hide();
+                $("#verticalFlip").find('span:eq(' + n + ')').show();
+            }, 3000);
+        });
+
+    </script>
+
 
     <style>
         body {
@@ -292,8 +305,8 @@
 
         .sun-moon-icon {
             position: absolute;
-            width: 20%;
-            height: 20%;
+            width: 15%;
+            height: 15%;
             margin-top: -5%;
             padding-top: 5px;
             padding-bottom: 10px;
@@ -321,61 +334,32 @@
         }
 
 
-        .center-div {
-            position: absolute;
-            margin: auto;
-            top: 45%;
-            right: 0;
-            bottom: 30%;
-            left: 30%;
-            width: 100%;
-            height: 100px;
-            color: #ccc;
-            border-radius: 3px;
-            font-size: 30px;
+        #verticalFlip {
+            top: 55%;
+            left: 55%;
+            width: relative;
+            /* height: 5em; */
+            margin-top: -1.5em;
+            font-family: "Share Tech Mono", monospace;
+            /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+            font-size: 2.5em;
+            /*set to a negative number 1/2 of your height*/
+            margin-left: -15em;
+            /*set to a negative number 1/2 of your width*/
+            /* border: 5px dashed #ccc; */
+            /* background-color: blueviolet; */
+            padding-left: 80px;
+            position: fixed;
+            color: yellow;
+            text-shadow: 0 0 20px rgba(10, 175, 230, 1), 0 0 20px rgba(10, 175, 230, 0);
         }
 
-        .fa-beat {
-            animation: fa-beat 5s ease infinite;
+
+        #verticalFlip span:not(:first-child) {
+            display: none;
         }
 
-        @keyframes fa-beat {
-            0% {
-                transform: scale(1);
-            }
 
-            5% {
-                transform: scale(1.25);
-            }
-
-            20% {
-                transform: scale(1);
-            }
-
-            30% {
-                transform: scale(1);
-            }
-
-            35% {
-                transform: scale(1.25);
-            }
-
-            50% {
-                transform: scale(1);
-            }
-
-            55% {
-                transform: scale(1.25);
-            }
-
-            70% {
-                transform: scale(1);
-            }
-        }
-
-        .heart {
-            color: red;
-        }
     </style>
 </head>
 
@@ -392,7 +376,7 @@
         <div class="bubble x9"></div>
         <div class="bubble x10"></div>
     </div>
-    <!-- <div class="center-div">Built with <p class="heart"><i class="fa fa-heart fa-1x fa-beat"></i></p>@ Hirotec India</div> -->
+
     <div id="clock1" class="element">
         <div class="sun-moon-icon" id="sunMoonIcon1"></div>
         <p id="date1">&nbsp;{{ date1 }}</p>
@@ -415,6 +399,19 @@
     </div>
 
 
+    <div id="verticalFlip">
+        <span>“If you live with passion you will always be happy.”</span>
+        <span>“You only stop, when you stop trying.”</span>
+        <span>“With the new day comes new strength and new thoughts.”</span>
+        <span>“Optimism is the faith that leads to achievement.”</span>
+        <span>“Opportunities don't happen, you create them.”</span>
+        <span>“Everything you can imagine is real.”</span>
+        <span>“When you have a dream, you've got to grab it and never let go.”</span>
+        <span>“Nothing is impossible. The word itself says 'I'm possible!'”</span>
+        <span>“The bad news is time flies. The good news is you're the pilot.”</span>
+        <span>“Dream big and dare to fail.”</span>
+        <span>“In the middle of difficulty lies opportunity.”</span>
+    </div>
 
     <div id="clock4" class="element">
         <div class="sun-moon-icon" id="sunMoonIcon4"></div>
