Dynamic Proverbs added with Credits

--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
         <span>“The bad news is time flies. The good news is you're the pilot.”</span>
         <span>“Dream big and dare to fail.”</span>
         <span>“In the middle of difficulty lies opportunity.”</span>
+        <span>Built with LOVE @ HIROTEC INDIA</span>
     </div>
 
     <div id="clock4" class="element">
