Tweaked for 12 Hours Format with Spacing

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             var AmOrPm = hours >= 12 ? 'PM' : 'AM';
             hours = (hours % 12) || 12;
             var minutes = cd.getMinutes();
-            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2)+ AmOrPm;
+            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2)+ " "+AmOrPm;
 
             clock1.time1 = finalTime;
 
@@ -179,7 +179,7 @@
             var AmOrPm = hours >= 12 ? 'PM' : 'AM';
             hours = (hours % 12) || 12;
             var minutes = cd.getMinutes();
-            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2) + AmOrPm;
+            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2) + " "+AmOrPm;
 
             clock2.time2 = finalTime;
 
@@ -229,7 +229,7 @@
             var AmOrPm = hours >= 12 ? 'PM' : 'AM';
             hours = (hours % 12) || 12;
             var minutes = cd.getMinutes();
-            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2)+ AmOrPm;
+            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2)+ " "+AmOrPm;
 
             clock3.time3 = finalTime;
 
@@ -275,7 +275,7 @@
             var AmOrPm = hours >= 12 ? 'PM' : 'AM';
             hours = (hours % 12) || 12;
             var minutes = cd.getMinutes();
-            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2)+AmOrPm;
+            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2)+" "+AmOrPm;
 
             clock4.time4 = finalTime;
 
@@ -320,7 +320,7 @@
             var AmOrPm = hours >= 12 ? 'PM' : 'AM';
             hours = (hours % 12) || 12;
             var minutes = cd.getMinutes();
-            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2)+AmOrPm;
+            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2)+" "+AmOrPm;
 
             clock5.time5 = finalTime;
 
@@ -363,7 +363,7 @@
             var AmOrPm = hours >= 12 ? 'PM' : 'AM';
             hours = (hours % 12) || 12;
             var minutes = cd.getMinutes();
-            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2) +AmOrPm;
+            var finalTime = zeroPadding(hours,2) + ":" + zeroPadding(minutes,2) +" "+AmOrPm;
 
             clock6.time6 = finalTime;
 
