Added the increased font size

--- a/index - small font.html
+++ b/index - small font.html
@@ -19,7 +19,7 @@
             height: 100vh;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow-x: hidden;
         }
 
         .sun-moon-icon {
@@ -28,7 +28,6 @@
             height: 15%;
             margin-top: -5%;
             padding-top: 5px;
-            padding-left: -5px;
             padding-bottom: 10px;
             background-size: contain;
             background-repeat: no-repeat;
@@ -75,7 +74,7 @@
         <div class="sun-moon-icon" id="sunMoonIcon3"></div>
         <p id="date3">&nbsp;{{ date3 }}</p>
         <p id="time3">{{ time3 }}</p>
-        <p id="text3">DETROIT</p>
+        <p id="text3">US (EAST)</p>
     </div>
 
 
@@ -83,7 +82,7 @@
         <div class="sun-moon-icon" id="sunMoonIcon4"></div>
         <p id="date4">&nbsp;{{ date4 }}</p>
         <p id="time4">{{ time4 }}</p>
-        <p id="text4">SAUDI</p>
+        <p id="text4">SAUDI ARABIA</p>
     </div>
 
     <div id="clock5" class="element">
@@ -424,13 +423,12 @@
 
             #date1 {
                 letter-spacing: 0.1em;
-                font-size: 35px;
-                padding-left: 7px;
+                font-size: 27px;
             }
 
             #text1 {
                 letter-spacing: 0.1em;
-                font-size: 70px;
+                font-size: 40px;
                 padding: 20px 0 0;
             }
         }
@@ -453,13 +451,12 @@
 
             #date2 {
                 letter-spacing: 0.1em;
-                font-size: 35px;
-                padding-left: 7px;
+                font-size: 27px;
             }
 
             #text2 {
                 letter-spacing: 0.1em;
-                font-size: 70px;
+                font-size: 40px;
                 padding: 20px 0 0;
             }
         }
@@ -482,13 +479,12 @@
 
             #date3 {
                 letter-spacing: 0.1em;
-                font-size: 35px;
-                padding-left: 7px;
+                font-size: 27px;
             }
 
             #text3 {
                 letter-spacing: 0.1em;
-                font-size: 70px;
+                font-size: 40px;
                 padding: 20px 0 0;
             }
         }
@@ -511,13 +507,12 @@
 
             #date4 {
                 letter-spacing: 0.1em;
-                font-size: 35px;
-                padding-left: 7px;
+                font-size: 27px;
             }
 
             #text4 {
                 letter-spacing: 0.1em;
-                font-size: 70px;
+                font-size: 40px;
                 padding: 30px 0 0;
             }
         }
@@ -540,13 +535,12 @@
 
             #date5 {
                 letter-spacing: 0.1em;
-                font-size: 35px;
-                padding-left: 7px;
+                font-size: 27px;
             }
 
             #text5 {
                 letter-spacing: 0.1em;
-                font-size: 70px;
+                font-size: 40px;
                 padding: 30px 0 0;
             }
         }
@@ -569,13 +563,12 @@
 
             #date6 {
                 letter-spacing: 0.1em;
-                font-size: 35px;
-                padding-left: 7px;
+                font-size: 27px;
             }
 
             #text6 {
                 letter-spacing: 0.1em;
-                font-size: 70px;
+                font-size: 40px;
                 padding: 30px 0 0;
             }
         }
